<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/select_a_role"
        android:text="@string/select_a_role"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/central_role"
        android:text="@string/central_role"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_a_role"
        />

    <Button
        android:id="@+id/peripheral_role"
        android:text="@string/peripheral_role"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/central_role"
        />

    <Button
        android:id="@+id/dual_role"
        android:text="@string/dual_role"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/peripheral_role"
        />

    <Button
        android:id="@+id/system_information"
        android:text="@string/system_information"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dual_role"
        />

</androidx.constraintlayout.widget.ConstraintLayout>